compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_trait_object_cast_from_generic_trait_impl.kn
// class: const-generic-trait-object-cast
// source: lowering should recover const generic arguments from the target trait when casting to a trait object
// exit: 0

trait Score[N: usize] {
    fn value() i32;
};

struct X {};

impl[N: usize] &X: Score[N] {
    fn value() i32 {
        return N as i32;
    }
}

fn main() i32 {
    let x = X.{};
    let score = (x.& as &Score[4]);
    return score.value() - 4;
}
