compiler/kernc_cli/tests/soundness/reject/specialization/trait_object_assoc_binding_cannot_fall_back_to_shadowed_impl.kn
// Trait object construction must use the same most-specific proof choice as
// direct trait checks and projection normalization.
// stderr: the source pointer type must implement the target trait

trait Factory[N: usize] {
    type Out;
    fn make() Out;
};

struct X {};

impl[N: usize] &X: Factory[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl &X: Factory[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn main() i32 {
    let x = X.{};
    _ = (x.& as &Factory[4, Out = i32]);
    return 0;
}
